apps/authentik/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: app-authentik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: authentik.dev0.sedware.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: authentik, port: { name: http } }
